--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,19 +1,8 @@
 {
   "importMap": "import_map.json",
   "tasks": {
-    "build": "silverbullet plug:compile hello.plug.yaml",
-    "watch": "silverbullet plug:compile hello.plug.yaml -w"
-  },
-  "lint": {
-    "rules": {
-      "exclude": ["no-explicit-any"]
-    }
-  },
-  "fmt": {
-    "exclude": [
-      "*.md",
-      "**/*.md",
-      "*.plug.js"
-    ]
+    "build": "silverbullet plug:compile --info --importmap import_map.json  treeview.plug.yaml",
+    "watch": "silverbullet plug:compile treeview.plug.yaml -w --importmap import_map.json",
+    "test": "deno test -A --unstable-kv  --unstable-worker-options"
   }
 }
