Add drag-and-drop support

--- a/deno.jsonc
+++ b/deno.jsonc
@@ -2,7 +2,8 @@
   "importMap": "import_map.json",
   "tasks": {
     "build": "silverbullet plug:compile --info --importmap import_map.json  treeview.plug.yaml",
-    "watch": "silverbullet plug:compile treeview.plug.yaml -w --importmap import_map.json",
+    "debug": "silverbullet plug:compile --info --debug --importmap import_map.json  treeview.plug.yaml",
+    "watch": "silverbullet plug:compile treeview.plug.yaml -w --debug --importmap import_map.json",
     "test": "deno test -A --unstable-kv  --unstable-worker-options"
   }
 }
