--- a/treeview.plug.yaml
+++ b/treeview.plug.yaml
@@ -1,5 +1,5 @@
 name: treeview
-version: 0.6
+version: 0.7
 assets:
   - "assets/**/*.*"
 functions:
@@ -18,6 +18,7 @@ functions:
       - editor:pageReloaded
       - editor:updated
       - page:deleted
+      - editor:init
 
   # User facing
   toggle:
