Add toggle hidden files button
Adds an eye icon button to the treeview header that toggles
exclusion filter visibility. When enabled, all excluded pages
and attachments (regex, tags, space-function, extension filters)
are shown. State persists in clientStore across navigations.

Also registers a "Tree View: Toggle Hidden Files" command.

--- a/treeview.plug.yaml
+++ b/treeview.plug.yaml
@@ -47,3 +47,8 @@ functions:
     path: "./treeview.ts:decreaseWidth"
     command:
       name: "Tree View: Decrease Width"
+
+  toggleHidden:
+    path: "./treeview.ts:toggleHidden"
+    command:
+      name: "Tree View: Toggle Hidden Files"
